--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-sketch-canvas": "^6.2.0",
     "react-tooltip": "^4.2.21",
     "three": "^0.144.0",
     "typescript": "^4.8.3",
