--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "framer-motion": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-sketch-canvas": "^6.2.0",
